<resources>
    <string name="app_name">Lateral</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_email_confirm">Re-enter email</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Re-enter password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_username_taken">This username is already in use</string>
    <string name="error_invalid_phone_number">This phone number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_no_match_email">Email addresses do not match</string>
    <string name="error_no_match_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup_link_prompt"><u>Don\'t have an account? Sign up!</u></string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_requested_tasks_view">My Requested Tasks</string>
    <string name="title_activity_assigned_and_bidded_tasks_view">My Assigned Tasks</string>
    <string name="filter_text">Filter</string>
    <string name="title_activity_all_tasks_view">All Tasks</string>
    <string name="search">Search</string>
    <string name="title_activity_task_view">All Tasks</string>
    <string name="title_activity_my_task_view">My Requested Tasks</string>
    <string name="large_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque convallis massa quam, ut accumsan purus facilisis a. Suspendisse a accumsan risus. Curabitur et mollis augue, laoreet semper ante. Vestibulum pulvinar, ipsum non scelerisque egestas, ligula magna blandit felis, at placerat nunc ligula sit amet urna. Suspendisse aliquet lectus sapien, eget dignissim sem semper ac. Mauris vehicula purus mi. Nulla ac pretium tortor, vitae mattis velit. Sed arcu erat, posuere eget ipsum id, condimentum bibendum dolor.\n\n
        Vivamus et auctor est. Nulla rutrum eget diam non tincidunt. Suspendisse potenti. Nunc eleifend, mi imperdiet molestie ultrices, felis felis aliquam lacus, at ullamcorper sapien nisl nec enim. Aenean vehicula sem mi, quis ultricies ante interdum a. Vestibulum vitae metus eleifend, dapibus leo id, condimentum tellus. Integer ac nibh ac orci vulputate viverra. Integer a gravida massa. Sed elementum blandit posuere. Phasellus sed nisl dignissim purus ultricies consequat. Proin vel arcu lorem. Maecenas quis tellus hendrerit, mollis risus ut, pulvinar massa. Mauris imperdiet odio sed elit aliquam, quis congue enim mattis. Nunc consequat quis dui vel tristique. Curabitur semper suscipit ligula semper faucibus. Vestibulum vel faucibus est.\n\n
        Maecenas porttitor enim at quam pulvinar, feugiat condimentum dolor dapibus. Donec et odio nisi. Praesent malesuada in odio in aliquam. Integer ac augue dui. Maecenas laoreet nec purus quis pretium. Praesent diam leo, suscipit et tortor nec, gravida sollicitudin urna. Mauris eu iaculis lacus. Ut eget tellus at metus volutpat feugiat at vitae diam. Vestibulum eu diam tellus.
    </string>
    <string name="bid_button_label">Bid Now!</string>
    <string name="current_bid_prompt">Current Bid:</string>
    <string name="temp_task_title">Lawnmowing</string>
    <string name="temp_username">\@cmerkosky</string>
    <string name="temp_date">Jun 24, 2018</string>
    <string name="temp_bid">$45.00</string>
    <string name="temp_new_bid_prompt">1 new bid!</string>

    <!-- Strings for tasks -->
    <string name="add_task_confirm">Post Task</string>
    <string name="edit_task_confirm">Confirm Changes</string>
    <string name="add_task_title">Add Task</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="delete_button_text">Delete Task</string>
    <string name="edit_button_text">Edit Task</string>

    <!-- Strings related to searching -->
    <string name="search_hint">Search all tasks</string>
    <string name="title_activity_assigned_tasks_view">AssignedTasksViewActivity</string>
    <string name="title_activity_bid_pop_up">BidPopUpActivity</string>
    <string name="title_activity_test">test</string>

    <!-- Strings for Bid Dialog -->
    <string name="bid_dialog_title">Place Your Bid</string>
    <string name="bid_dialog_amount_filler">$0.00</string>
    <string name="bid_dialog_bid_button_text">Bid</string>
    <string name="bid_dialog_cancel_button_text">Cancel</string>

    <!-- Strings for Bid Card -->
    <string name="bid_card_accept_button">Accept</string>
    <string name="bid_card_decline_button">Decline</string>
    <string name="bid_card_username_text_field">Username: @%1s</string>
    <string name="bid_card_amount_text_field">Amount: $%1s</string>

    <!-- Strings for Task View -->
    <string name="task_view_no_bids">None</string>
    <string name="task_view_not_assigned">None</string>

    <!-- Strings for Bid List activity -->
    <string name="bid_list_default_display_text">No Bids</string>

    <!-- Project wide strings-->
    <string name="dollar_amount_display">$%1$s</string>
    <string name="username_display">\@%1$s</string>
    <string name="ok">Ok</string>

    <string name="load_user_fail">Failed to load user!</string>
    <string name="network_connection_fail_message">Couldn\'t connect to the network</string>
    <string name="set_requested_btn_text">Cancel Assigned Bid</string>
    <string name="set_done_btn_text">Task Done</string>
    <string name="see_bids_btn_text">See Bids</string>

    <string name="qrcode_message_text">Click the button to scan a QR Code for a task</string>
    <string name="qrcode_button_text">Start!</string>
    <string name="qrcode_autofocus_check">Autofocus</string>
    <string name="qrcode_flash_check">Flash</string>
    <string name="qrcode_option">QR Code</string>
    <string name="qrcode_instructions">Screenshot this page to save this task\'s QR Code!</string>

    <string name="permission_camera_rationale">Needed to access the camera to scan a QR code</string>
    <string name="no_camera_permission">Permission to open camera not granted!</string>
    <string name="low_storage_error">Your device doesn\'t have enough storage!</string>
    <string name="add_geolocation">Add Geolocation</string>

    <string name="error_unknown_message">An error occurred</string>


</resources>
