<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bid_dialog_lo"
    android:layout_width="240dp"
    android:layout_height="130dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/bid_dialog_title"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/amount_pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/bid_dialog_amount_filler"
        android:textColor="@android:color/darker_gray"
        android:maxLength="10" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bid_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/holo_green_dark"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/bid_dialog_bid_button_text"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/cancel_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/holo_red_light"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/bid_dialog_cancel_button_text"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>